@@ -1,0 +1,24 @@
+Q: 1 &#33267;
+Q: 2
+A: 1
+A: 2
+I: REP=8 LAP=0 EF=3.200 UF=2.370 INT=429 LAST=27.01.06
+O: 36
+
+Q: 1 &#33267;
+Q: 3
+A: 1
+A: 2
+I: REP=0 LAP=0 EF=3.200 UF=2.370 INT=429 LAST=27.01.06
+O: 36
+
+Q: 1 &#33267;
+Q: 4
+A: 1
+A: 2
+I: REP=1 LAP=2 EF=3.200 UF=2.370 INT=429 LAST=0
+O: 36
+
+Q: 5 &#33267;
+A: 2
+
